--- a/ui/customer/licenses.html
+++ b/ui/customer/licenses.html
@@ -248,7 +248,14 @@
   cursor: pointer;
   font-weight: 600;
   border-bottom: 3px solid transparent;
+  color: var(--muted);          /* 👈 readable but subtle */
+  transition: color 0.15s ease, border-color 0.15s ease;
 }
+
+.tab:hover {
+  color: var(--fg);             /* 👈 full contrast on hover */
+}
+
 
 .tab.active {
   border-bottom: 3px solid var(--accent);
