--- a/ui/customer/index.html
+++ b/ui/customer/index.html
@@ -2,153 +2,183 @@
 <html lang="en" data-theme="light">
 <head>
 <meta charset="UTF-8" />
-<title>US Signal | Customer Portal</title>
+<title>US Signal | Webex Customer Hub</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <style>
-
-/* === COPY YOUR EXACT THEME VARIABLES === */
+/* ======================================================
+   Enterprise Theme (Matches licenses.html)
+====================================================== */
 html[data-theme="light"] {
-  --bg: #f9fafb;
-  --fg: #111827;
+  --bg: #f8fafc;
+  --fg: #0f172a;
   --card: #ffffff;
-  --border: #e5e7eb;
+  --border: #e2e8f0;
   --accent: #2563eb;
-  --muted: #6b7280;
-  --shadow: 0 8px 22px rgba(0,0,0,0.06);
+  --muted: #64748b;
+  --shadow: 0 10px 30px rgba(0,0,0,0.06);
 }
 
 html[data-theme="dark"] {
   --bg: #0b1220;
   --fg: #e5e7eb;
-  --card: #020617;
-  --border: #1f2937;
+  --card: #0f172a;
+  --border: #1e293b;
   --accent: #3b82f6;
-  --muted: #9ca3af;
-  --shadow: 0 8px 22px rgba(0,0,0,0.25);
+  --muted: #94a3b8;
+  --shadow: 0 10px 30px rgba(0,0,0,0.35);
 }
 
-* {
-  box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-}
+* { box-sizing: border-box; font-family: system-ui, -apple-system, sans-serif; }
 
 body {
-  margin: 0;
-  background: var(--bg);
-  color: var(--fg);
+  margin:0;
+  background:var(--bg);
+  color:var(--fg);
 }
 
+/* HEADER */
 header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 16px 20px;
-  border-bottom: 1px solid var(--border);
-  background: var(--card);
-  position: sticky;
-  top: 0;
-  z-index: 10;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:18px 28px;
+  background:var(--card);
+  border-bottom:1px solid var(--border);
+  position:sticky;
+  top:0;
+  z-index:10;
 }
 
 .brand {
-  display: flex;
-  align-items: center;
-  gap: 14px;
+  display:flex;
+  align-items:center;
+  gap:16px;
 }
 
-header img {
-  height: 34px;
+.brand img { height:34px; }
+
+.brand h1 {
+  margin:0;
+  font-size:18px;
+  font-weight:700;
 }
 
-header h1 {
-  font-size: 18px;
-  margin: 0;
-  font-weight: 700;
-}
-
-.headerRight {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-
-.pill {
-  font-size: 12px;
-  padding: 6px 10px;
-  border-radius: 999px;
-  border: 1px solid var(--border);
-  background: rgba(37, 99, 235, 0.08);
-  font-weight: 600;
+.header-actions {
+  display:flex;
+  gap:12px;
+  align-items:center;
 }
 
 button {
-  padding: 8px 12px;
-  border-radius: 10px;
-  border: 1px solid var(--border);
-  background: transparent;
-  cursor: pointer;
-  font-weight: 600;
+  padding:8px 14px;
+  border-radius:8px;
+  border:1px solid var(--border);
+  background:var(--card);
+  cursor:pointer;
 }
 
+button.primary {
+  background:var(--accent);
+  color:white;
+  border:none;
+}
+
+/* MAIN */
 main {
-  padding: 32px;
-  max-width: 1200px;
-  margin: auto;
+  max-width:1400px;
+  margin:auto;
+  padding:32px;
 }
 
-.card {
-  background: var(--card);
-  border: 1px solid var(--border);
-  border-radius: 16px;
-  padding: 24px;
-  box-shadow: var(--shadow);
+/* KPI CARDS */
+.kpi-grid {
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:20px;
+  margin-bottom:32px;
 }
 
-h2 {
-  margin-top: 0;
+.kpi {
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:16px;
+  padding:24px;
+  box-shadow:var(--shadow);
+  transition:all .2s ease;
 }
 
-.muted {
-  color: var(--muted);
-  font-size: 14px;
+.kpi:hover { transform:translateY(-4px); }
+
+.kpi h3 {
+  margin:0 0 8px 0;
+  font-size:13px;
+  text-transform:uppercase;
+  color:var(--muted);
 }
 
-/* === PORTAL GRID === */
-
-.portal-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 20px;
-  margin-top: 24px;
+.kpi-value {
+  font-size:28px;
+  font-weight:800;
 }
 
-.portal-card {
-  background: var(--card);
-  border: 1px solid var(--border);
-  border-radius: 16px;
-  padding: 24px;
-  text-decoration: none;
-  color: var(--fg);
-  transition: transform 0.15s ease, box-shadow 0.15s ease;
-  box-shadow: var(--shadow);
+/* NAV GRID */
+.nav-grid {
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+  margin-top:24px;
 }
 
-.portal-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 12px 30px rgba(0,0,0,0.1);
+.nav-card {
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:16px;
+  padding:24px;
+  cursor:pointer;
+  transition:all .2s ease;
 }
 
-.portal-card h3 {
-  margin: 0 0 8px 0;
+.nav-card:hover {
+  transform:translateY(-4px);
+  border-color:var(--accent);
 }
 
-.portal-card p {
-  margin: 0;
-  font-size: 13px;
-  color: var(--muted);
+.nav-card h3 {
+  margin:0 0 8px 0;
+  font-size:16px;
 }
 
+.nav-card p {
+  margin:0;
+  color:var(--muted);
+  font-size:13px;
+}
+
+/* ACTIVITY */
+.activity {
+  margin-top:40px;
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:16px;
+  padding:24px;
+}
+
+.activity h2 { margin-top:0; }
+
+.activity ul {
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+
+.activity li {
+  padding:10px 0;
+  border-bottom:1px solid var(--border);
+  font-size:14px;
+}
+
+.activity li:last-child { border-bottom:none; }
 </style>
 </head>
 
@@ -156,88 +186,89 @@ h2 {
 
 <header>
   <div class="brand">
-    <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" alt="US Signal" />
-    <div>
-      <h1>Customer Portal</h1>
-      <div class="muted" id="whoLine">Loading…</div>
-    </div>
+    <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
+    <h1>Customer Hub</h1>
   </div>
 
-  <div class="headerRight">
-    <div class="pill" id="tenantPill">Tenant: —</div>
+  <div class="header-actions">
     <button id="btnTheme">Dark Mode</button>
+    <button onclick="location.href='/customer/licenses'">Go to Portal</button>
   </div>
 </header>
 
 <main>
 
-  <div class="card">
-    <h2>Welcome</h2>
-    <p class="muted">
-      Access your Webex Calling services, device health, analytics, maintenance updates, and support resources.
-    </p>
+<!-- KPI SECTION -->
+<div class="kpi-grid">
+  <div class="kpi">
+    <h3>License Health</h3>
+    <div class="kpi-value" id="licenseHealth">Loading…</div>
   </div>
 
-  <div class="portal-grid">
-
-    <a href="/customer/licenses" class="portal-card">
-      <h3>Dashboard</h3>
-      <p>Licenses, Devices, Analytics, and CDR reporting.</p>
-    </a>
-
-    <a href="/customer/maintenance" class="portal-card">
-      <h3>Maintenance</h3>
-      <p>Upcoming service windows and maintenance history.</p>
-    </a>
-
-    <a href="/customer/incidents" class="portal-card">
-      <h3>Incidents</h3>
-      <p>Service disruptions and incident reporting.</p>
-    </a>
-
-    <a href="/customer/status" class="portal-card">
-      <h3>Status</h3>
-      <p>Live service health and system availability.</p>
-    </a>
-
+  <div class="kpi">
+    <h3>Device Health</h3>
+    <div class="kpi-value" id="deviceHealth">Loading…</div>
   </div>
+
+  <div class="kpi">
+    <h3>Total Calls (7d)</h3>
+    <div class="kpi-value" id="callVolume">Loading…</div>
+  </div>
+
+  <div class="kpi">
+    <h3>Open Incidents</h3>
+    <div class="kpi-value" id="incidentCount">Loading…</div>
+  </div>
+</div>
+
+<!-- NAVIGATION GRID -->
+<div class="nav-grid">
+  <div class="nav-card" onclick="location.href='/customer/licenses'">
+    <h3>License Management</h3>
+    <p>Monitor usage, deficits, and allocation.</p>
+  </div>
+
+  <div class="nav-card" onclick="location.href='/customer/status'">
+    <h3>System Status</h3>
+    <p>Live Webex service health overview.</p>
+  </div>
+
+  <div class="nav-card" onclick="location.href='/customer/maintenance'">
+    <h3>Maintenance</h3>
+    <p>Upcoming and active maintenance windows.</p>
+  </div>
+
+  <div class="nav-card" onclick="location.href='/customer/incidents'">
+    <h3>Incident History</h3>
+    <p>Review current and past service incidents.</p>
+  </div>
+</div>
+
+<!-- ACTIVITY FEED -->
+<div class="activity">
+  <h2>Recent Activity</h2>
+  <ul id="activityFeed">
+    <li>Loading recent activity…</li>
+  </ul>
+</div>
 
 </main>
 
 <script>
-const $ = (id) => document.getElementById(id);
-
-/* === THEME === */
-function loadTheme() {
-  const saved = localStorage.getItem("uiTheme");
-  const theme = saved === "dark" ? "dark" : "light";
-  document.documentElement.setAttribute("data-theme", theme);
-  $("btnTheme").textContent = theme === "dark" ? "Light Mode" : "Dark Mode";
+// Simple theme toggle
+function loadTheme(){
+  const saved = localStorage.getItem("uiTheme") || "light";
+  document.documentElement.setAttribute("data-theme", saved);
+  document.getElementById("btnTheme").textContent =
+    saved === "dark" ? "Light Mode" : "Dark Mode";
 }
-function toggleTheme() {
-  const cur = document.documentElement.getAttribute("data-theme");
-  const next = cur === "dark" ? "light" : "dark";
+document.getElementById("btnTheme").onclick = () => {
+  const current = document.documentElement.getAttribute("data-theme");
+  const next = current === "dark" ? "light" : "dark";
   localStorage.setItem("uiTheme", next);
   loadTheme();
-}
-$("btnTheme").addEventListener("click", toggleTheme);
+};
 loadTheme();
-
-/* === LOAD USER CONTEXT === */
-async function init() {
-  const res = await fetch("/api/me");
-  if (!res.ok) {
-    window.location.href = "/pin";
-    return;
-  }
-
-  const me = await res.json();
-
-  $("whoLine").textContent = `${me.email} (${me.role})`;
-  $("tenantPill").textContent = `Tenant: ${me.orgName || "—"}`;
-}
-
-init();
 </script>
 
 </body>
